--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "concat-css": "cleancss -o css/style.min.css css/normalize.min.css css/milligram.min.css css/main.css",
     "concat-js": "concat-cli -f js/jszip.min.js js/ejs.min.js js/main.js -o js/script.min.js",
-    "minify-html": "html-minifier-terser --collapse-whitespace --remove-comments --remove-comments --remove-redundant-attributes --remove-script-type-attributes index.src.html -o index.html"
+    "minify-html": "html-minifier-terser --collapse-whitespace --remove-comments --remove-comments --remove-redundant-attributes --remove-script-type-attributes index.src.html -o index.html",
+    "generate-pwa": "workbox generateSW workbox-config.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "clean-css-cli": "^5.6.3",
     "concat-cli": "^4.0.0",
-    "html-minifier-terser": "^7.2.0"
+    "html-minifier-terser": "^7.2.0",
+    "workbox-cli": "^7.1.0"
   }
 }
